--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	</header>
 	<!-- main element -->
  	<main>
- 		<header>MOOOOOO</header>
+ 		<h1>MOOOOOO</h1
+ 		>
  		
 
  		<p>Community Bike Project in South London
