--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="mystyle.css">
 	<title> Turning Cogs London </title>
 </head>
 <body>
@@ -28,7 +29,6 @@ The cost of living crisis has meant many people need to chose carefully what the
 Encouraging cycling in our local area also helps to reduce the local air pollution levels and makes our local area a nicer place to be. Where possible we take parts from broken bikes that have been donated to us, apart from this making bike maintenance affordable, it also means we are recycling parts that may otherwise have gone to waste.
 Recently Turning Cogs has been looking to set up a stable place to store our tools and spare parts, as well as a work space to work on bikes and make it easier to complete jobs that cant be done in a single session. At the moment we are hugely limited by space, we rely on the parts and tools we have scattered across our private homes. This often means a lot of time and energy is put into finding who has what parts stored where. Having a centralised space to put keep all of our tools and parts will make the project run much smoother and will allow the project to really take off.
 If you, or someone you know, might have access to a suitable space for the Turning Cogs project please get in touch.</p>
-
  	</main>
 <footer>
 	<p>
